// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LayoutBuilder should render area 1`] = `
<div>
  <div
    class="LayoutBuilder LayoutBuilder__Area"
  >
    <div
      class="LayoutBuilder__Area"
      data-testid="Area"
      style="flex: 1;"
    >
      <div
        class="LayoutBuilder__BlockContainer"
      >
        Block
      </div>
    </div>
  </div>
</div>
`;

exports[`LayoutBuilder should render sub area 1`] = `
<div>
  <div
    class="LayoutBuilder LayoutBuilder__Area"
  >
    <div
      class="LayoutBuilder__Area"
      data-testid="Area1"
      style="flex: 1;"
    >
      <div
        class="LayoutBuilder__SubAreaContainer"
      >
        <div
          class="LayoutBuilder__Area"
          data-testid="Area2"
          style="flex: 1;"
        >
          <div
            class="LayoutBuilder__BlockContainer"
          >
            Block2
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
